--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ package-mode = false
 python = "^3.10"
 fastapi = "^0.110.1"
 uvicorn = "^0.29.0"
+pydantic = "^2.8.2"
 
 [build-system]
 requires = ["poetry-core"]
