Added environment variables to docker-compose, added sample.env and fields to pydantic-settings object

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,8 @@ services:
       - "27017:27017"
     volumes:
       - ./db-data:/data/db
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
     env_file:
       - .env
