--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ pydantic = "^2.8.2"
 pydantic-settings = "^2.3.4"
 passlib = {extras = ["argon2"], version = "^1.7.4"}
 pyjwt = {extras = ["crypto"], version = "^2.8.0"}
-motor = "^3.5.1"
+beanie = "^1.26.0"
 
 [build-system]
 requires = ["poetry-core"]
